# amsakib-career-chatbot

./: .env.example  .gitignore  README.md  lab.ipynb  main.py  pyproject.toml
notebooks/: lab.ipynb
resources/: summary.txt
